--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,24 @@
     }
   ],
   "routes": [
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
+  ],
+  "env": {
+    "CI": "false"
+  }
+}{
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    }
+  ],
+  "routes": [
     {
       "src": "/static/(.*)",
       "dest": "/static/$1"
