--- a/package.json
+++ b/package.json
@@ -1,35 +1,22 @@
 {
-  "name": "unlockable-content-agency-marketplace",
+  "name": "nft-minting-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@thirdweb-dev/react": "^4.1.17",
-    "@thirdweb-dev/sdk": "^4.0.23",
-    "assert": "^2.1.0",
-    "browserify-zlib": "^0.2.0",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.1",
+    "@tanstack/react-query": "^5.75.5",
+    "@thirdweb-dev/react": "^3.14.40",
+    "@thirdweb-dev/sdk": "^3.10.59",
     "ethers": "^5.7.2",
-    "framer-motion": "^10.16.4",
-    "https-browserify": "^1.0.0",
-    "os-browserify": "^0.3.0",
-    "path-browserify": "^1.0.1",
-    "process": "^0.11.10",
     "react": "^18.2.0",
-    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
-    "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "thirdweb": "^0.13.0",
-    "url": "^0.11.4",
-    "web-vitals": "^2.1.4"
+    "thirdweb": "^5.98.0",
+    "web-vitals": "^5.0.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
